--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BY Arch - About</title>
+
+    <title>About | Berkay Yıldız Architecture</title>
+    <meta name="description"
+        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+    <meta property="og:title" content="About Us | Berkay Yıldız Architecture">
+    <meta property="og:description"
+        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/about">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us | Berkay Yıldız Architecture">
+    <meta name="twitter:description"
+        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
+
+
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
@@ -47,7 +63,8 @@
             </div>
 
 
-            <p class="about-p">BY Arch is an Izmir-based studio specializing in contemporary architecture, interior
+            <p class="about-p">Berkay Yıldız Architecture is an Izmir-based studio specializing in contemporary
+                architecture, interior
                 design, and landscape
                 integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
                 functional but also deeply connected to their surroundings.<br>
