--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BY Arch - Contact</title>
+
+    <title>Contact | Berkay Yıldız Architecture</title>
+    <meta name="description"
+        content="Get in touch with Berkay Yıldız Architecture for inquiries, collaborations, and consultations. We’re here to bring your vision to life.">
+    <meta property="og:title" content="Contact Us | Berkay Yıldız Architecture">
+    <meta property="og:description"
+        content="Get in touch with Berkay Yıldız Architecture for inquiries, collaborations, and consultations. We’re here to bring your vision to life.">
+    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/contact-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/contact">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Us | Berkay Yıldız Architecture">
+    <meta name="twitter:description"
+        content="Get in touch with Berkay Yıldız Architecture for inquiries, collaborations, and consultations. We’re here to bring your vision to life.">
+    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/contact-banner.jpg">
+
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
 
