--- a/services/index.html
+++ b/services/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BY Arch - Services</title>
+
+    <title>Services | Berkay Yıldız Architecture</title>
+    <meta name="description"
+        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+    <meta property="og:title" content="Our Services | Berkay Yıldız Architecture">
+    <meta property="og:description"
+        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/services">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Services | Berkay Yıldız Architecture">
+    <meta name="twitter:description"
+        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
+
+
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
 
@@ -35,7 +51,8 @@
                 <h3 class="service-h3">Architecture</h3>
 
                 <p class="service-p">
-                    At BY Arch, we don’t just design spaces; we create experiences. From concept development
+                    At Berkay Yıldız Architecture, we don’t just design spaces; we create experiences. From concept
+                    development
                     to the finest construction details, every project—whether residential or
                     commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
                     a passion for design that goes beyond aesthetics, we transform ideas into functional,
@@ -48,7 +65,8 @@
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
                 <h3 class="service-h3">Interior Design</h3>
-                <p class="service-p">At BY Arch, we believe in the importance of seamless integration between
+                <p class="service-p">At Berkay Yıldız Architecture, we believe in the importance of seamless integration
+                    between
                     architecture and
                     interior design to ensure the overall harmony of every project. That’s why we not only
                     handle architectural designs but also offer meticulously crafted interior design
