--- a/works/index.html
+++ b/works/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BY Arch - Works</title>
+
+    <title>Works | Berkay Yıldız Architecture</title>
+    <meta name="description"
+        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
+    <meta property="og:title" content="Our Works | Berkay Yıldız Architecture">
+    <meta property="og:description"
+        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
+    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/works-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/works">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Works | Berkay Yıldız Architecture">
+    <meta name="twitter:description"
+        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
+    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/works-banner.jpg">
+
+
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
 
