--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/contact-banner.jpg">
 
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
+    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
@@ -56,19 +56,20 @@
         <div class="contact-lower">
             <div></div>
             <div class="contact-info">
-                <img class="contact-icon" src="/images/phone-icon.png" alt="">
+                <img class="contact-icon" src="/images/phone-icon.png" alt="Phone icon for contact" loading="lazy">
                 <h3>Phone</h3>
                 <div class="contact-divider"></div>
                 <p><a href="tel:+905071860835">+90 507 186 0835</a></p>
             </div>
             <div class="contact-info">
-                <img class="contact-icon" src="/images/mail-icon.png" alt="">
+                <img class="contact-icon" src="/images/mail-icon.png" alt="Mail icon for contact" loading="lazy">
                 <h3>Email</h3>
                 <div class="contact-divider"></div>
                 <p><a href="mailto:info@berkayyildizmimarlik.com">info@berkayyildizmimarlik.com</a></p>
             </div>
             <div class="contact-info">
-                <img class="contact-icon" src="/images/location-icon.png" alt="">
+                <img class="contact-icon" src="/images/location-icon.png" alt="Location icon for contact"
+                    loading="lazy">
                 <h3>Location</h3>
                 <div class="contact-divider"></div>
                 <p>
