--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/homepage-banner.jpg">
 
-
+    <link rel="canonical" href="https://berkayyildizmimarlik.com/">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/x-icon" href="/images/fav-icon.png">
+    <link rel="icon" type="image/png" href="/images/fav-icon.png" sizes="32x32">
 
     <script src="/js/script.js" defer></script> <!-- Include your main script.js file -->
     <script src="/js/navbar.js" defer></script> <!-- Load the navbar component script -->
@@ -39,6 +39,28 @@
 
         gtag('config', 'G-JCX6EMK0LB');
     </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ArchitecturalBusiness",
+      "name": "Berkay Yıldız Mimarlık",
+      "url": "https://berkayyildizmimarlik.com",
+      "logo": "https://berkayyildizmimarlik.com/images/fav-icon.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Mansuroğlu Mah. 286/3 Sk. No: 14B",
+        "addressLocality": "Bayraklı",
+        "addressRegion": "İzmir",
+        "postalCode": "35535",
+        "addressCountry": "TR"
+      },
+      "telephone": "+90 507 186 0835",
+      "email": "info@berkayyildizmimarlik.com",
+      "description": "Welcome to Berkay Yıldız Architecture, specializing in creative architectural designs for residential and commercial spaces."
+    }
+    </script>
+
 </head>
 
 
@@ -61,7 +83,7 @@
 
         <div class="prism-container">
             <img class="toggling-text" src="/images/toggling-text.gif"
-                alt="Animated text showcasing Berkay Yıldız Architecture" height="80">
+                alt="Animated text showcasing Berkay Yıldız Architecture" height="80" loading="lazy">
         </div>
     </section>
 
