--- a/services/index.html
+++ b/services/index.html
@@ -22,7 +22,7 @@
 
 
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
+    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
