--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
     <script src="../js/footer.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
+    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
