lang file structure

--- a/de/dienstleistungen/index.html
+++ b/de/dienstleistungen/index.html
@@ -21,8 +21,8 @@
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
 
 
-    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
+    <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
+    <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
