--- a/de/kontakt/index.html
+++ b/de/kontakt/index.html
@@ -20,8 +20,8 @@
         content="Get in touch with Berkay Yıldız Architecture for inquiries, collaborations, and consultations. We’re here to bring your vision to life.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/contact-banner.jpg">
 
-    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
+    <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
+    <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
