--- a/de/footer.html
+++ b/de/footer.html
@@ -1,7 +1,7 @@
 <footer class="contact-footer">
     <div class="footer-container">
         <div class="contact">
-            <h3>Contact</h3>
+            <h3>Kontakt</h3>
             <p>T: <a href="tel:+905071860835">+90 507 186 0835</a></p>
             <p>E: <a href="mailto:info@berkayyildizmimarlik.com">info@berkayyildizmimarlik.com</a></p>
             <p>
@@ -13,14 +13,13 @@
             </p>
         </div>
         <div class="follow-us">
-            <h3>Follow Us</h3>
-            <a href="https://www.instagram.com/berkayyildizarchitecture?igsh=YWgxNjNleTdhenNp&utm_source=qr"
-                target="_blank" class="instagram-link">
+            <h3>Folgen Sie Uns</h3>
+            <a href="https://www.instagram.com/berkayyildizarchitecture" target="_blank">
                 <img src="/images/insta.png" alt="Instagram"> Instagram
             </a>
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 Berkay Yıldız Mimarlık. All Rights Reserved.</p>
+        <p>&copy; 2024 Berkay Yıldız Architektur. Alle Rechte Vorbehalten.</p>
     </div>
 </footer>
