lang file structure

--- a/de/dienstleistungen/index.html
+++ b/de/dienstleistungen/index.html
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../js/script-de.js" defer></script>
+    <script src="../js/navbar-de.js" defer></script>
+    <script src="../js/footer-de.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
