--- a/de/navbar-de.html
+++ b/de/navbar-de.html
@@ -13,7 +13,7 @@
             <li><a href="/DE/kontakt/">Kontakt</a></li>
             <li><a href="/DE/projekte/">Projekte</a></li>
         </ul>
-        <ul class="navbar-links">
+        <ul class="navbar-lang-links">
             <li><a href="/TR/anasayfa/">TR</a></li>
             <li><a href="/DE/home/" class="active">DE</a></li>
             <li><a href="/EN/home/">EN</a></li>
