--- a/de/uber-uns/index.html
+++ b/de/uber-uns/index.html
@@ -21,10 +21,10 @@
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
 
 
-    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
+    <script src="../js/script-de.js" defer></script>
+    <script src="../js/navbar-de.js" defer></script>
+    <script src="../js/footer-de.js" defer></script>
     <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <style>
