--- a/navbar.html
+++ b/navbar.html
@@ -13,7 +13,7 @@
             <li><a href="/EN/contact/">Contact</a></li>
             <li><a href="/EN/works/">Works</a></li>
         </ul>
-        <ul class="navbar-links">
+        <ul class="navbar-lang-links">
             <li><a href="/TR/anasayfa/">TR</a></li>
             <li><a href="/DE/home/">DE</a></li>
             <li><a href="/EN/home/" class="active">EN</a></li>
