--- a/tr/navbar-tr.html
+++ b/tr/navbar-tr.html
@@ -13,7 +13,7 @@
             <li><a href="/TR/iletisim/">İletişim</a></li>
             <li><a href="/TR/calismalarimiz/">Çalışmalarımız</a></li>
         </ul>
-        <ul class="navbar-links">
+        <ul class="navbar-lang-links">
             <li><a href="/TR/anasayfa/" class="active">TR</a></li>
             <li><a href="/DE/home/">DE</a></li>
             <li><a href="/EN/home/">EN</a></li>
