--- a/en/about/index.html
+++ b/en/about/index.html
@@ -23,9 +23,9 @@
 
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
 
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../js/script-en.js" defer></script>
+    <script src="../js/navbar-en.js" defer></script>
+    <script src="../js/footer-en.js" defer></script>
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
     <style>
