--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -25,9 +25,9 @@
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../js/script-en.js" defer></script>
+    <script src="../js/navbar-en.js" defer></script>
+    <script src="../js/footer-en.js" defer></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
