--- a/en/home/index.html
+++ b/en/home/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Berkay Yıldız Mimarlık | Modern ve Yaratıcı Mimari Tasarımlar</title>
+    <title>Home | Berkay Yıldız Architecture</title>
     <meta name="description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
-    <meta property="og:title" content="Berkay Yıldız Mimarlık | Modern ve Yaratıcı Mimari Tasarımlar">
+        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+    <meta property="og:title" content="Home | Berkay Yıldız Architecture">
     <meta property="og:description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
-    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/homepage-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/anasayfa">
+        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+    <meta property="og:image" content="../../images/homepage-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/en/home">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Berkay Yıldız Mimarlık | Modern ve Yaratıcı Mimari Tasarımlar">
+    <meta name="twitter:title" content="Home | Berkay Yıldız Architecture">
     <meta name="twitter:description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
-    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/homepage-banner.jpg">
+        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+    <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
-    <link rel="canonical" href="https://berkayyildizmimarlik.com/tr/anasayfa/">
+    <link rel="canonical" href="https://berkayyildizmimarlik.com/en/home/">
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
+    <script src="../js/script-en.js" defer></script>
+    <script src="../js/navbar-en.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -40,7 +40,6 @@
     </script>
 </head>
 
-
 <body>
 
     <!-- Navbar -->
@@ -48,18 +47,18 @@
 
     <!-- Home Section -->
     <section class="home-section">
-        <h1 class="visually-hidden">Berkay Yıldız Mimarlık - Modern ve Yaratıcı Tasarımlar</h1>
+        <h1 class="visually-hidden">Berkay Yıldız Architecture - Modern and Creative Designs</h1>
         <div class="home-video-container">
             <video class="home-video" playsinline autoplay muted loop>
-                <source src="../images/bya-hero.webm" type="video/webm">
-                <source src="../images/bya-hero.mp4" type="video/mp4">
-                Tarayıcınız video etiketini desteklemiyor. Berkay Yıldız Mimarlık ile modern bir deneyim yaşayın.
+                <source src="../../images/bya-hero.webm" type="video/webm">
+                <source src="../../images/bya-hero.mp4" type="video/mp4">
+                Your browser does not support the video tag. Experience modern design with Berkay Yıldız Architecture.
             </video>
         </div>
 
         <div class="prism-container">
-            <img class="toggling-text" src="../images/toggling-text.gif"
-                alt="Berkay Yıldız Mimarlık'ı gösteren animasyonlu metin" height="80" loading="lazy">
+            <img class="toggling-text" src="../../images/toggling-text.gif"
+                alt="Animated text showcasing Berkay Yıldız Architecture" height="80" loading="lazy">
         </div>
     </section>
 
