--- a/tr/anasayfa/index.html
+++ b/tr/anasayfa/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Berkay Yıldız Architecture | Modern and Creative Architectural Designs</title>
+    <title>Anasayfa | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
-    <meta property="og:title" content="Berkay Yıldız Architecture | Modern and Creative Architectural Designs">
+        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+    <meta property="og:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
-    <meta property="og:image" content="https://berkayyildizmimarlik.com/images/homepage-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/">
+        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+    <meta property="og:image" content="../../images/homepage-banner.jpg">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/anasayfa">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Berkay Yıldız Architecture | Modern and Creative Architectural Designs">
+    <meta name="twitter:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
-    <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/homepage-banner.jpg">
+        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+    <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
-    <link rel="canonical" href="https://berkayyildizmimarlik.com/">
+    <link rel="canonical" href="https://berkayyildizmimarlik.com/tr/anasayfa/">
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
-    <script src="../js/script.js" defer></script> <!-- Include your main script.js file -->
-    <script src="../js/navbar.js" defer></script> <!-- Load the navbar component script -->
+    <script src="../js/script-tr.js" defer></script>
+    <script src="../js/navbar-tr.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -36,33 +36,9 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-JCX6EMK0LB');
     </script>
-
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ArchitecturalBusiness",
-      "name": "Berkay Yıldız Mimarlık",
-      "url": "https://berkayyildizmimarlik.com",
-      "logo": "https://berkayyildizmimarlik.com/images/fav-icon.png",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Mansuroğlu Mah. 286/3 Sk. No: 14B",
-        "addressLocality": "Bayraklı",
-        "addressRegion": "İzmir",
-        "postalCode": "35535",
-        "addressCountry": "TR"
-      },
-      "telephone": "+90 507 186 0835",
-      "email": "info@berkayyildizmimarlik.com",
-      "description": "Welcome to Berkay Yıldız Architecture, specializing in creative architectural designs for residential and commercial spaces."
-    }
-    </script>
-
 </head>
-
 
 <body>
 
@@ -71,19 +47,18 @@
 
     <!-- Home Section -->
     <section class="home-section">
-        <h1 class="visually-hidden">Berkay Yıldız Architecture - Creative Modern Designs</h1> <!-- For SEO -->
+        <h1 class="visually-hidden">Berkay Yıldız Mimarlık - Modern ve Yaratıcı Tasarımlar</h1>
         <div class="home-video-container">
             <video class="home-video" playsinline autoplay muted loop>
-                <source src="/images/bya-hero.webm" type="video/webm">
-                <source src="/images/bya-hero.mp4" type="video/mp4">
-                Your browser does not support the video tag. Visit us at Berkay Yıldız Architecture for an immersive
-                experience.
+                <source src="../../images/bya-hero.webm" type="video/webm">
+                <source src="../../images/bya-hero.mp4" type="video/mp4">
+                Tarayıcınız video etiketini desteklemiyor. Berkay Yıldız Mimarlık ile modern bir deneyim yaşayın.
             </video>
         </div>
 
         <div class="prism-container">
-            <img class="toggling-text" src="/images/toggling-text.gif"
-                alt="Animated text showcasing Berkay Yıldız Architecture" height="80" loading="lazy">
+            <img class="toggling-text" src="../../images/toggling-text.gif"
+                alt="Berkay Yıldız Mimarlık'ı gösteren animasyonlu metin" height="80" loading="lazy">
         </div>
     </section>
 
