--- a/tr/calismalarimiz/index.html
+++ b/tr/calismalarimiz/index.html
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../js/script-tr.js" defer></script>
+    <script src="../js/navbar-tr.js" defer></script>
+    <script src="../js/footer-tr.js" defer></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@@ -50,35 +50,35 @@
     <section class="works-section">
         <div class="works-container">
             <div class="work">
-                <img src="../images/mutfak.jpg" alt="mutfak" class="work-image">
+                <img src="../../images/mutfak.jpg" alt="mutfak" class="work-image">
                 <div class="work-name">
                     <h3 class="work-h3">MY Kitchen Design</h3>
                     <p class="work-p">Interior Design</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../images/banyo.jpg" alt="banyo" class="work-image">
+                <img src="../../images/banyo.jpg" alt="banyo" class="work-image">
                 <div class="work-name">
                     <h3 class="work-h3">OS Bathroom Design</h3>
                     <p class="work-p">Interior Design</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../images/salon.jpg" alt="" class="work-image">
+                <img src="../../images/salon.jpg" alt="" class="work-image">
                 <div class="work-name">
                     <h3 class="work-h3">SY Livingroom Design</h3>
                     <p class="work-p">Interior Design</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../images/house1.jpg" alt="" class="work-image">
+                <img src="../../images/house1.jpg" alt="" class="work-image">
                 <div class="work-name">
                     <h3 class="work-h3">SS House</h3>
                     <p class="work-p">Architecture</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../images/house2.jpg" alt="" class="work-image">
+                <img src="../../images/house2.jpg" alt="" class="work-image">
                 <div class="work-name">
                     <h3 class="work-h3">SS House</h3>
                     <p class="work-p">Architecture</p>
