--- a/tr/hakkimizda/index.html
+++ b/tr/hakkimizda/index.html
@@ -22,9 +22,9 @@
 
 
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
-    <script src="../js/script.js" defer></script>
-    <script src="../js/navbar.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../js/script-tr.js" defer></script>
+    <script src="../js/navbar-tr.js" defer></script>
+    <script src="../js/footer-tr.js" defer></script>
     <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
     <style>
