case sensitivity issue

--- a/de/navbar-de.html
+++ b/de/navbar-de.html
@@ -7,16 +7,16 @@
     </button>
     <div class="navbar-menu">
         <ul class="navbar-links">
-            <li><a href="/DE/home/">Startseite</a></li>
-            <li><a href="/DE/dienstleistungen/">Dienstleistungen</a></li>
-            <li><a href="/DE/uber-uns/">Über Uns</a></li>
-            <li><a href="/DE/kontakt/">Kontakt</a></li>
-            <li><a href="/DE/projekte/">Projekte</a></li>
+            <li><a href="/de/home/">Startseite</a></li>
+            <li><a href="/de/dienstleistungen/">Dienstleistungen</a></li>
+            <li><a href="/de/uber-uns/">Über Uns</a></li>
+            <li><a href="/de/kontakt/">Kontakt</a></li>
+            <li><a href="/de/projekte/">Projekte</a></li>
         </ul>
         <ul class="navbar-lang-links">
-            <li><a href="/TR/anasayfa/">TR</a></li>
-            <li><a href="/DE/home/" class="active">DE</a></li>
-            <li><a href="/EN/home/">EN</a></li>
+            <li><a href="/tr/anasayfa/">TR</a></li>
+            <li><a href="/de/home/" class="active">DE</a></li>
+            <li><a href="/en/home/">EN</a></li>
         </ul>
     </div>
 </nav>
