--- a/en/navbar-en.html
+++ b/en/navbar-en.html
@@ -7,16 +7,16 @@
     </button>
     <div class="navbar-menu">
         <ul class="navbar-links">
-            <li><a href="/EN/home/">Home</a></li>
-            <li><a href="/EN/services/">Services</a></li>
-            <li><a href="/EN/about/">About</a></li>
-            <li><a href="/EN/contact/">Contact</a></li>
-            <li><a href="/EN/works/">Works</a></li>
+            <li><a href="/en/home/">Home</a></li>
+            <li><a href="/en/services/">Services</a></li>
+            <li><a href="/en/about/">About</a></li>
+            <li><a href="/en/contact/">Contact</a></li>
+            <li><a href="/en/works/">Works</a></li>
         </ul>
         <ul class="navbar-lang-links">
-            <li><a href="/TR/anasayfa/">TR</a></li>
-            <li><a href="/DE/home/">DE</a></li>
-            <li><a href="/EN/home/" class="active">EN</a></li>
+            <li><a href="/tr/anasayfa/">TR</a></li>
+            <li><a href="/de/home/">DE</a></li>
+            <li><a href="/en/home/" class="active">EN</a></li>
         </ul>
     </div>
 </nav>
