--- a/tr/navbar-tr.html
+++ b/tr/navbar-tr.html
@@ -7,16 +7,16 @@
     </button>
     <div class="navbar-menu">
         <ul class="navbar-links">
-            <li><a href="/TR/anasayfa/">Anasayfa</a></li>
-            <li><a href="/TR/hizmetlerimiz/">Hizmetlerimiz</a></li>
-            <li><a href="/TR/hakkimizda/">Hakkımızda</a></li>
-            <li><a href="/TR/iletisim/">İletişim</a></li>
-            <li><a href="/TR/calismalarimiz/">Çalışmalarımız</a></li>
+            <li><a href="/tr/anasayfa/">Anasayfa</a></li>
+            <li><a href="/tr/hizmetlerimiz/">Hizmetlerimiz</a></li>
+            <li><a href="/tr/hakkimizda/">Hakkımızda</a></li>
+            <li><a href="/tr/iletisim/">İletişim</a></li>
+            <li><a href="/tr/calismalarimiz/">Çalışmalarımız</a></li>
         </ul>
         <ul class="navbar-lang-links">
-            <li><a href="/TR/anasayfa/" class="active">TR</a></li>
-            <li><a href="/DE/home/">DE</a></li>
-            <li><a href="/EN/home/">EN</a></li>
+            <li><a href="/tr/anasayfa/" class="active">TR</a></li>
+            <li><a href="/de/home/">DE</a></li>
+            <li><a href="/en/home/">EN</a></li>
         </ul>
     </div>
 </nav>
